gallery updates & refactoring

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -37,6 +37,40 @@ pre {
     white-space: pre-wrap;
 }
 
+.balance-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.balance {
+    width: 442px;
+    height: 78px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255,0.1);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-bottom: 20px;
+}
+
+.show-key {
+    font-size: 16px;
+    color: #00f6d2;
+    margin-right: 10px;
+}
+
+.tx-warning {
+    font-size: 0.85em;
+    color: rgba(255, 255, 255, 0.6);
+    margin-bottom: 20px;
+    text-align: center;
+}
+
 .upload {
     display:         flex;
     align-items:     center;
