moved to new contract, fixes

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -78,6 +78,10 @@ pre {
     margin-bottom: 20px;
 }
 
+.upload > input {
+    margin-right: 20px;
+}
+
 .vertical-container {
     display: flex; 
     flex-direction: column;
