--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -63,6 +63,25 @@ pre {
     color: #fff;
 }
 
+.balance-withdraw {
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.balance-withdraw__icon {
+    width: 16px;
+    height: 16px;
+}
+
+.balance-withdraw__text {
+    margin-left: 8px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #0bccf7;
+}
+
 .show-key {
     font-size: 16px;
     color: #00f6d2;
@@ -108,6 +127,7 @@ pre {
 .tab-item {
     color: rgba(255, 255, 255, .3);
     font-size: 12px;
+    font-weight: bold;
     cursor: pointer;
 }
 
