my artist name added

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -80,7 +80,7 @@ pre {
     display:         flex;
     align-items:     center;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-top: 30px;
 }
 
 .upload > input {
