moved to new utils

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -72,7 +72,7 @@ pre {
 .tx-warning {
     font-size: 0.85em;
     color: rgba(255, 255, 255, 0.6);
-    margin-bottom: 20px;
+    margin-top: 30px;
     text-align: center;
 }
 
