--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -284,3 +284,43 @@ a {
 .ml-hem {
     margin-left: 0.5em;
 }
+
+.coming-soon {
+    margin: 100px auto 0 auto;
+    width: 580px;
+    padding: 50px 0 30px 0;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, .1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 14px;
+    font-style: italic;
+    color: #fff;
+}
+
+.coming-soon__title {
+    font-size: 24px;
+}
+
+.coming-soon__icon {
+    width: 203px;
+    height: 132px;
+    margin-top: 18px;
+}
+
+.coming-soon__text {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.cp-div {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+.cp {
+    cursor: pointer;
+    margin-left: 10px;
+}
