--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -40,7 +40,6 @@ pre {
 .balance-container {
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -356,4 +355,38 @@ pre {
 
 .button:hover {
     box-shadow: 0 0 8px white;
+}
+
+.user-opt {
+    display: flex;
+    flex-direction: column;
+}
+
+.user-opt__key {
+    padding: 14px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, .1);
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.user-opt__key__text {
+    font-size: 16px;
+    color: #00f6d2;
+    margin-left: 10px;
+}
+
+.user-opt__user {
+    padding-left: 15px;
+    padding-bottom: 12px;
+    display: flex;
+    align-items: center;
+}
+
+.user-opt__user__text {
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+    margin-left: 7px;
 }
