--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -175,6 +175,7 @@ pre {
 .artwork-likes {
     display: flex;
     align-items: center;
+    margin-left: auto;
     margin-top: 20px;
 }
 
@@ -185,7 +186,6 @@ pre {
 .artwork-owner {
     font-size: 12px;
     color: rgba(255, 255, 255, .5);
-    margin-top: 6px;
 }
 
 .artwork .preview-container {
@@ -208,8 +208,8 @@ pre {
     box-sizing: border-box;
     padding: 0 14px;
     display: flex;
+    align-items: center;
     flex-direction: row;
-    justify-content: space-between;
     margin-bottom: 3px;
 }
 
@@ -394,4 +394,13 @@ pre {
     font-weight: bold;
     color: #fff;
     margin-left: 7px;
+}
+
+.mine {
+    padding: 3px 8px;
+    border-radius: 3px;
+    background-color: rgba(0, 246, 210, .3);
+    color: #fff;
+    font-size: 12px;
+    margin-left: 10px;
 }
