--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -91,8 +91,8 @@ pre {
 }
 
 .tx-warning {
-    font-size: 0.85em;
-    color: rgba(255, 255, 255, 0.6);
+    font-size: 1.5em;
+    color: rgba(255, 255, 255, 0.8);
     margin-top: 30px;
     text-align: center;
 }
@@ -112,7 +112,11 @@ pre {
     display: flex; 
     flex-direction: column;
     width:  100%;
-    height: 100%
+    height: 100%;
+}
+
+.web .vertical-container {
+    height: 85%;
 }
 
 .artworks-controls {
@@ -194,7 +198,7 @@ pre {
 
 .artwork .preview-container {
     height: 360px;
-    background-color: #f8f8f8;
+    background-color: rgba(240, 205, 205, 0.1);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -362,6 +366,16 @@ pre {
     background-color: #0bccf7;
 }
 
+.button.close {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: #fff;
+}
+
+.button.copy {
+    margin-left: 30px;
+    background-color: #00f6d2;
+}
+
 .button__text {
     margin-left: 5px;
 }
@@ -413,4 +427,49 @@ pre {
     color: #fff;
     font-size: 12px;
     margin-left: 10px;
+}
+
+.popup {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: fixed;
+    top: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+.popup .popup__content-key{
+    padding: 40px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 760px;
+}
+
+.popup__content-key__title {
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.popup__content-key__data {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.popup__content-key__data .copy-icon {
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+.popup__content-key__controls {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
 }
