--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -128,18 +128,8 @@ pre {
 .artworks-controls {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
-
-.sort {
-    margin-left: auto;
-    cursor: pointer;
-}
-
-.sort.empty {
-    opacity: 0.5;
-    font-size: 14px;
-    color: #fff;
-} 
 
 .artworks-controls__tabs {
     display: flex;
@@ -580,4 +570,73 @@ pre {
     font-weight: 500;
     color: #0bccf7;
     margin-left: 10px;
+}
+
+.custom-select {
+    position: relative;
+    display: flex;
+    text-align: left;
+    outline: none;
+    height: 47px;
+    line-height: 47px;
+    min-width: 160px;
+    margin-left: auto;
+}
+
+.custom-select .selected {
+    background-color: transparent;
+    border-radius: 6px;
+    color: #fff;
+    padding-left: 1em;
+    cursor: pointer;
+    user-select: none;
+
+
+    opacity: 0.7;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0.47px;
+}
+
+.custom-select .selected.open {
+    border: none;
+}
+
+.custom-select .selected:after {
+    position: absolute;
+    content: "";
+    top: 22px;
+    right: 1em;
+    width: 0;
+    height: 0;
+    border: 5px solid transparent;
+    border-color: #fff transparent transparent transparent;
+}
+
+.custom-select .items {
+    color: #fff;
+    overflow: hidden;
+    border: none;
+    position: absolute;
+    background-color: #00446c;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    margin-top: 40px;
+}
+
+.custom-select .items div {
+    color: #fff;
+    padding: 9px 0 9px 1em;
+    line-height: 1;
+    cursor: pointer;
+    user-select: none;
+}
+
+.custom-select .items div:hover {
+    color: #00f6d2;
+}
+
+.selectHide {
+    display: none;
 }
