voing is disabled if no rewards

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -651,3 +651,10 @@ pre {
     display: none;
 }
 
+.pointer-cursor {
+    cursor: pointer;
+}
+
+*[disabled="true"] {
+    cursor: default !important;
+}
