dev build + source maps

--- a/html/main.css
+++ b/html/main.css
@@ -1,6 +1,6 @@
-/*!************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/fonts.css ***!
-  \************************************************************************/
+/*!****************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./src/styles/fonts.css ***!
+  \****************************************************************************************************/
 @font-face {
     font-family: "SFProDisplay";
     font-display: swap;
@@ -9,9 +9,9 @@
     font-weight: normal;
     font-style: normal;
 }
-/*!*************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/global.css ***!
-  \*************************************************************************/
+/*!*****************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./src/styles/global.css ***!
+  \*****************************************************************************************************/
 /* common start */
 
 html, body {
