--- a/html/main.css
+++ b/html/main.css
@@ -728,26 +728,45 @@ pre {
 .dropdown-content {
   display: none;
   position: relative;
-  top: 110px;
+  top: 60px;
   right: 0px;
   margin-top: 60px;
-  background-color: #00446c;
-  color: #ffffff;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.1);
   min-width: 160px;
   overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(46, 25, 25, 0.2);
   z-index: 1;
 }
 
 .dropdown-content a {
   color: #ffffff;
-  padding: 12px 16px;
+  margin: 14px 5px;
   text-decoration: none;
   display: block;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
 }
-
-.dropdown a:hover {
-  color: #00f6d2;
+.dropdown-content a.change_price:before {
+  content: "";
+  display: block;
+  background: url(fe6f7c0e30431f87dca1.svg) no-repeat;
+  width: 20px;
+  height: 20px;
+  float: left;
+  margin: 2px 6px 0 0;
+}
+.dropdown-content a.remove_from_sale:before {
+  content: "";
+  display: block;
+  background: url(4b40c006dcbd41e7aee4.svg) no-repeat;
+  width: 20px;
+  height: 20px;
+  float: left;
+  margin: 2px 6px 0 0;
 }
 .show {
   display: block;
