--- a/html/main.css
+++ b/html/main.css
@@ -513,7 +513,7 @@ pre {
   height: 100%;
   overflow: hidden;
   position: fixed;
-  top: 0px;
+  top: 0%;
   display: flex;
   justify-content: center;
   align-items: center;
