--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -113,7 +113,11 @@ pre {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
-    margin-bottom: -30px;
+    margin-bottom: -15px;
+}
+
+.admin-column select.upload_artist {
+    font-size: 0.95em;
 }
 
 .admin-row {
@@ -151,6 +155,7 @@ pre {
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100%;
 }
 
 .artworks-controls__tabs {
@@ -693,4 +698,60 @@ pre {
 
 .invisible {
     opacity: 0;
+}
+
+.paginator {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 2px;
+}
+
+.paginator > .prev,
+.paginator > .next {
+    width: 68px !important;
+    height: 22px;
+    margin: 0 20px 0 0;
+    border-radius: 2px;
+    background-color: rgba(255, 255, 255, .1);
+    color: rgba(255, 255, 255, .5);
+    font-size: 14px;
+    text-align: center;
+}
+
+.paginator > .prev:hover:not([disabled="true"]),
+.paginator > .next:hover:not([disabled="true"]) {
+    color: rgba(255, 255, 255, .9);
+    cursor: pointer;
+}
+
+.paginator > .prev[disabled="true"],
+.paginator > .next[disabled="true"] {
+    color: rgba(255, 255, 255, .15);
+}
+
+.paginator > .prev {
+    margin: 0 13px 0 0;
+}
+
+.paginator > .next {
+    margin: 0 0 0 16px;
+}
+
+.paginator > .page {
+  margin: 3px 7px;
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+}
+
+.paginator >.page:hover:not([selected="true"]) {
+    color: rgba(255, 255, 255, .9);
+    cursor: pointer
+}
+
+.paginator > .page[selected="true"] {
+    cursor: auto;
+    color: #00f6d2;
 }
