--- a/html/main.css
+++ b/html/main.css
@@ -1,6 +1,44 @@
-/*!****************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./src/styles/fonts.css ***!
-  \****************************************************************************************************/
+/*!********************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[4].use[0]!./src/components/loading.vue?vue&type=style&index=0&id=24a16d5c&lang=stylus&scoped=true ***!
+  \********************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
+.app-loading[data-v-24a16d5c] {
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.app-loading .title[data-v-24a16d5c] {
+  font-size: 25px;
+  font-weight: 400;
+}
+
+/*!***********************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[4].use[0]!./src/components/popup-menu.vue?vue&type=style&index=0&id=6326aff0&scoped=true&lang=stylus ***!
+  \***********************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
+.popup-menu[data-v-6326aff0] {
+  border-radius: 10px;
+  z-index: 999;
+  position: fixed;
+  outline: none;
+  padding: 10px 20px;
+}
+.popup-menu .item[data-v-6326aff0-s] {
+  color: #fff;
+  padding: 6px 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  line-height: normal !important;
+}
+.popup-menu .item[data-v-6326aff0-s]:hover {
+  color: #00f6d2;
+}
+.popup-menu .item[data-v-6326aff0-s]>img {
+  margin-right: 10px;
+}
+
+/*!************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-2.use[1]!./src/styles/fonts.css ***!
+  \************************************************************************************************/
 @font-face {
     font-family: "SFProDisplay";
     font-display: swap;
@@ -9,9 +47,9 @@
     font-weight: normal;
     font-style: normal;
 }
-/*!*****************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./src/styles/global.css ***!
-  \*****************************************************************************************************/
+/*!*************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-2.use[1]!./src/styles/global.css ***!
+  \*************************************************************************************************/
 /* common start */
 
 html, body {
@@ -46,18 +84,6 @@ html {
     width:           100%;
     overflow:        hidden;
     word-break:      break-word;
-}
-
-.full-loading {
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 50px;
-    background-color: transparent;
-}
-
-.full-loading__title {
-    font-size: 25px;
-    font-weight: 400;
 }
 
 pre {
@@ -114,13 +140,6 @@ pre {
     font-size: 16px;
     color: #00f6d2;
     margin-right: 10px;
-}
-
-.tx-warning {
-    font-size: 1.5em;
-    color: rgba(255, 255, 255, 0.8);
-    margin-top: 30px;
-    text-align: center;
 }
 
 .admin-column {
@@ -407,6 +426,7 @@ pre {
 
 .disabled {
     opacity: 0.2;
+    cursor: auto !important;
 }
 
 .button {
@@ -708,6 +728,7 @@ pre {
 
 *[disabled="true"] {
     cursor: default !important;
+    opacity: 0.3;
 }
 
 .paginator {
@@ -772,29 +793,4 @@ pre {
     margin-right: -4px;
 }
 
-.popup-menu {
-    border-radius: 10px;
-    z-index: 999;
-    position: fixed;
-    outline: none;
-    padding: 10px 20px;
-
-}
-
-.popup-menu .item {
-    color: #fff;
-    padding: 6px 0;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    line-height: normal !important;
-}
-
-.popup-menu .item:hover {
-    color: #00f6d2;
-}
-
-.popup-menu .item img {
-    margin-right: 10px;
-}
 
