--- a/html/main.css
+++ b/html/main.css
@@ -644,7 +644,7 @@ pre {
   outline: none;
   height: 47px;
   line-height: 47px;
-  min-width: 175px;
+  min-width: 20px;
   margin-left: auto;
 }
 
@@ -655,11 +655,10 @@ pre {
   padding-left: 1em;
   cursor: pointer;
   user-select: none;
-
   opacity: 0.7;
   font-size: 14px;
   font-weight: bold;
-  letter-spacing: 0.47px;
+  letter-spacing: normal;
 }
 
 .custom-select .selected.open {
@@ -751,9 +750,7 @@ pre {
   float: left;
   margin: 2px 6px 0 0;
 }
-.show {
-  display: block;
-}
+
 
 .menu-nav {
   margin-left: auto;
@@ -807,4 +804,16 @@ pre {
 }
 .sort-text{
   align-self: center;
+  color: #fff;
+  opacity: 0.5; 
+}
+
+.show{
+  display: flex;
+  margin-left: 200px;
+
+}
+
+.hide {
+  display: none;
 }
