--- a/html/main.css
+++ b/html/main.css
@@ -1,5 +1,5 @@
 /*!********************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[4].use[0]!./src/components/loading.vue?vue&type=style&index=0&id=24a16d5c&lang=stylus&scoped=true ***!
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/loading.vue?vue&type=style&index=0&id=24a16d5c&lang=stylus&scoped=true ***!
   \********************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
 .app-loading[data-v-24a16d5c] {
   text-align: center;
@@ -12,7 +12,7 @@
 }
 
 /*!******************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[4].use[0]!./src/components/error.vue?vue&type=style&index=0&id=ea0f4bb0&scoped=true&lang=stylus ***!
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/error.vue?vue&type=style&index=0&id=ea0f4bb0&scoped=true&lang=stylus ***!
   \******************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
 .error[data-v-ea0f4bb0] {
   display: flex;
@@ -31,7 +31,7 @@
 }
 
 /*!***********************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[4].use[0]!./src/components/popup-menu.vue?vue&type=style&index=0&id=6326aff0&scoped=true&lang=stylus ***!
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/popup-menu.vue?vue&type=style&index=0&id=6326aff0&scoped=true&lang=stylus ***!
   \***********************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
 .popup-menu[data-v-6326aff0] {
   border-radius: 10px;
@@ -53,6 +53,29 @@
 }
 .popup-menu .item[data-v-6326aff0-s]>img {
   margin-right: 10px;
+}
+
+/*!****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/artwork-details.vue?vue&type=style&index=0&id=b1dac1ee&scoped=true&lang=stylus ***!
+  \****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
+.details[data-v-b1dac1ee] {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+}
+.details .back-btn[data-v-b1dac1ee] {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: bolder;
+  letter-spacing: 1.5px;
+  opacity: 0.5;
+}
+.details .back-btn img[data-v-b1dac1ee] {
+  margin-right: 0.25em;
+  width: 14px;
+  height: 14px;
 }
 
 /*!************************************************************************************************!*\
@@ -94,12 +117,11 @@ html {
     word-break:      break-word;
 }
 
-
-
 .balance-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 .balance {
@@ -149,8 +171,7 @@ html {
 .admin-column {
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
-    margin-bottom: -15px;
+    margin-bottom: 10px;
 }
 
 .admin-column select.upload_artist {
@@ -185,7 +206,6 @@ html {
 .actions-container {
     display: flex;
     flex-direction: row;
-    margin-top: 30px;
 }
 
 .artworks-controls {
@@ -294,6 +314,7 @@ html {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+    cursor: pointer;
 }
 
 .artwork > .info-row {
@@ -829,3 +850,4 @@ html {
 .custom-select .items div:hover {
     color: #00f6d2;
 }
+
